--- a/src/sass/_sideboard-header.scss
+++ b/src/sass/_sideboard-header.scss
@@ -10,8 +10,7 @@
 	border-top: $border-sections;
 	border-bottom: 3px solid $color-section-border-alt;
 	box-shadow: 0 1px 0 rgba(#000, .0833);
-	padding: 0 $lhse*.5;
-	min-height: $lhse*2.2; // Equal to the element's height as if there were vertical paddings of `$lhse*.375`.
+	height: $lhse*2.25; // A particular height that prevents wider gaps between card buttons in the card list at all viewport widths due to pixel rounding by the browser.
 
 	h3,
 	h4,
@@ -21,6 +20,10 @@
 	}
 	h3 {
 		align-self: center;
+	}
+	h3,
+	.sideboard-card-total {
+		padding: $lhse*.375 $lhse*.5;
 	}
 	h4 {
 		@include label-text-style;
@@ -46,10 +49,11 @@
 	}
 }
 
-@media (max-width: ($min-width-app * .4)) {
+@media (max-width: ($min-width-app * .4167)) {
 	.sideboard-header {
 		display: block;
 		padding: 0;
+		height: auto;
 
 		h3 {
 			text-align: center;
